--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.8.2",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.12.1",
+    "googleapis": "^149.0.0",
     "next": "15.3.2",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
