--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "swr": "^2.3.3",
     "tmi.js": "^1.8.5",
     "yup": "^1.6.1",
     "zod": "^3.25.17"
