--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firecms/neat": "^0.4.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.8.2",
     "dotenv": "^16.5.0",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "swr": "^2.3.3",
+    "three.js": "^0.77.1",
     "tmi.js": "^1.8.5",
     "yup": "^1.6.1",
     "zod": "^3.25.17"
