--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "NODE_OPTIONS='--max_old_space_size=4096' next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,10 +12,12 @@
     "@firecms/neat": "^0.4.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.8.2",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.12.1",
     "googleapis": "^149.0.0",
     "next": "15.3.2",
+    "next-auth": "^5.0.0-beta.30",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
