--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@firecms/neat": "^0.4.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.8.2",
+    "@types/nodemailer": "^7.0.4",
     "bcryptjs": "^3.0.3",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.12.1",
     "googleapis": "^149.0.0",
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.30",
+    "nodemailer": "^7.0.12",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
