--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dotenv": "^16.5.0",
     "framer-motion": "^12.12.1",
     "googleapis": "^149.0.0",
-    "next": "15.3.2",
+    "next": "^15.5.9",
     "next-auth": "^5.0.0-beta.30",
     "nodemailer": "^7.0.12",
     "prisma": "^6.8.2",
@@ -28,7 +28,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "swr": "^2.3.3",
-    "three.js": "^0.77.1",
+    "three.js": "^0.77.0",
     "tmi.js": "^1.8.5",
     "yup": "^1.6.1",
     "zod": "^3.25.17"
